# vim: set noexpandtab:

2012-09-01 Steve
	* Adding cross section files for noslep grids
	A         data/modeA_hadW_MC1eqMN2.txt
	A         data/modeA_lepW_MC1eqMN2.txt
	A         data/modeC_lepW_MC1eqMN2.txt
	* Updating susySamples with the current available p1032 noslep grids

2012-08-29 Steve
	* Add truth jets to SusyD3PDInterface
	* Add method to SusyD3PDAna for matching reco jets to truth jets with dR
		* Used to set matchTruth flag in SusyNtMaker
	* Filling new tau variables: author, nTrack, eleBDT, jetBDT
	* Tagging SusyCommon-00-00-34

2012-08-26 Steve
	* Added pileup tools for A-B3, A-B, and A-D7
	* Filling the corresponding variables in the SusyNt
	* Adding total event weight functions to SusyD3PDana
	* Tagging SusyCommon-00-00-33

2012-08-20 Steve
	* Adding SusyMetValidation, a class for analyzing the MET in the d3pds

2012-08-17 Steve
	* Updated to MultiLep-01-02-04 and SUSYTools-00-01-04
		* GetMetVector usage changes slightly
	* Updated HforToolD3PD usage, verbosity now works, 
	  so we no longer need to check run number ourselves
	* Tagging SusyCommon-00-00-32

2012-08-13 Steve
	* To make sure I'm allowing all samples allowed by the Hfor tool, I copied
	  the whole function which checks the run number into SusyD3PDAna.isHFORSample()
	* Tagging SusyCommon-00-00-31

2012-08-12 Steve
	* Changed refMuo term to use MuonTotal from the METUtility, not RefMuon

2012-08-09 Steve
	* Updated usage of HforToolD3PD to use removalmode = ALL
	* Tagging SusyCommon-00-00-30

2012-08-08 Steve
	* Now setting lepton efficiency SF to 1 if running on data

2012-08-07 Steve
	* Added some stuff in SusyD3PDAna for my muon truth checks
	* Modified the SusyD3PDTest to use SusyD3PDAna rather than SusyNtInterface

2012-08-02 Steve
	* Changed btag weight MV1 to use the d3pd variable
	* Tagging SusyCommon-00-00-29
		* Wow, lot's of tags lately...

2012-08-01 Steve
	* Changed met component terms to GeV
	* Tagging SusyCommon-00-00-27